[package]
name = "brokk-valkryie"
version = "0.2.0"
edition = "2024"
description = "GitHub pull request watcher and reviewer powered by Anvil"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/BrokkAi/valkyrie"
publish = true

[[bin]]
name = "vk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
