[package]
name = "brokk-valkryie"
version = "0.2.1"
edition = "2024"
description = "GitHub pull request watcher and reviewer powered by Anvil"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/BrokkAi/valkyrie"
publish = true

[[bin]]
name = "vk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
